refactoring while documenting. mouse events in element base are acting weird. investigating...

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,9 +24,8 @@
       "@canvas/models/*": ["app/lib/canvas/models/*"],
       "@canvas/objects/*": ["app/lib/canvas/objects/*"],
       "@canvas/shapes/*": ["app/lib/canvas/shapes/*"],
-      "@canvas/ui/*": ["app/lib/canvas/user-interface/*"],
       "@canvas/utilities/*": ["app/lib/canvas/utilities/*"],
-      "@canvas/elements/*": ["app/lib/canvas/user-interface/elements/"],
+      "@canvas/elements/*": ["app/lib/canvas/elements/*"],
     }
   }
 }
