--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "@angular/router": "^6.0.2",
     "@tensorflow/tfjs": "^0.11.4",
     "core-js": "^2.5.4",
+    "gl-matrix": "^2.6.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.2",
     "@angular-devkit/build-angular": "~0.6.3",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.3",
+    "@angular/compiler-cli": "^6.0.2",
     "@angular/language-service": "^6.0.2",
+    "@types/gl-matrix": "^2.4.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -44,6 +45,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
