--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "canvas-interactive-library": {
+    "canvas-elements": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/canvas-interactive-library",
+            "outputPath": "dist/canvas-elements",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -50,18 +50,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "canvas-interactive-library:build"
+            "browserTarget": "canvas-elements:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "canvas-interactive-library:build:production"
+              "browserTarget": "canvas-elements:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "canvas-interactive-library:build"
+            "browserTarget": "canvas-elements:build"
           }
         },
         "test": {
@@ -95,7 +95,7 @@
         }
       }
     },
-    "canvas-interactive-library-e2e": {
+    "canvas-elements-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -103,7 +103,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "canvas-interactive-library:serve"
+            "devServerTarget": "canvas-elements:serve"
           }
         },
         "lint": {
@@ -118,5 +118,5 @@
       }
     }
   },
-  "defaultProject": "canvas-interactive-library"
+  "defaultProject": "canvas-elements"
 }
