--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "canvas-interactive-library",
-  "version": "0.0.0",
+  "name": "canvas-elements",
+  "version": "0.0.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,31 +11,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.2",
-    "@angular/common": "^6.0.2",
-    "@angular/compiler": "^6.0.2",
-    "@angular/core": "^6.0.2",
-    "@angular/forms": "^6.0.2",
-    "@angular/http": "^6.0.2",
-    "@angular/platform-browser": "^6.0.2",
-    "@angular/platform-browser-dynamic": "^6.0.2",
-    "@angular/router": "^6.0.2",
-    "@tensorflow/tfjs": "^0.11.4",
-    "core-js": "^2.5.4",
-    "gl-matrix": "^2.6.1",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "gl-matrix": "^2.6.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.3",
+    "@angular/animations": "^6.0.2",
     "@angular/cli": "~6.0.3",
+    "@angular/common": "^6.0.2",
+    "@angular/compiler": "^6.0.2",
     "@angular/compiler-cli": "^6.0.2",
+    "@angular/core": "^6.0.2",
+    "@angular/forms": "^6.0.2",
+    "@angular/http": "^6.0.2",
     "@angular/language-service": "^6.0.2",
+    "@angular/platform-browser": "^6.0.2",
+    "@angular/platform-browser-dynamic": "^6.0.2",
+    "@angular/router": "^6.0.2",
     "@types/gl-matrix": "^2.4.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "core-js": "^2.5.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -43,9 +40,11 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
+    "protractor": "^5.4.0",
+    "rxjs": "^6.0.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "zone.js": "^0.8.26"
   }
 }
