--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,8 @@
         "projects/canvas-elements/src/public-api",
       ]
     }
+  },
+  "angularCompilerOptions": {
+    "strictTemplates": true
   }
 }
