--- a/projects/canvas-elements/package.json
+++ b/projects/canvas-elements/package.json
@@ -1,9 +1,9 @@
 {
   "name": "canvas-elements",
   "version": "0.0.1",
-  "peerDependencies": {},
   "dependencies": {
     "gl-matrix": "^3.3.0",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "uuid": "^8.3.2"
   }
 }
