--- a/projects/canvas-elements/tsconfig.lib.json
+++ b/projects/canvas-elements/tsconfig.lib.json
@@ -6,7 +6,9 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": [],
+    "types": [
+
+    ],
     "lib": [
       "dom",
       "ES2020"
